<resources>
    <string name="app_name">Care App</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!--MainActivity-->
    <string name="please_type_all_fields">請輸入所有欄位！</string>
    <string name="login_failure_input_error">登入失敗!身分證or密碼輸入錯誤!忘記密碼?</string>
    <string name="login_failure_not_found_error">登入失敗!http回應有誤!</string>
    <string name="login_failure_inner_error">網路問題!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
